--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>firebase-auth-test</title>
+
     <link type="text/css" rel="stylesheet" href="node_modules/firebaseui/dist/firebaseui.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.css" />
   </head>
   <body>
     <div id="app"></div>
