--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.0.0/masonry.pkgd.min.js"></script>
     <script src="/dist/build.js"></script>
+
   </body>
 </html>
